<resources>
    <string name="app_name">Megingiard-ZH</string>
    <string name="focus_launcher_no_apps">No apps found</string>
    <string name="wrong_screen_message">Megingiard needs to run on the bottom screen.\nPlease move the app to continue.</string>
    <string name="cd_wrong_screen_arrow">Arrow pointing to bottom screen</string>
    <string name="cd_stop_mirroring">Stop Mirroring</string>
    <string name="cd_start_mirroring">Start Mirroring</string>
    <string name="cd_freeze">Freeze</string>
    <string name="cd_unfreeze">Unfreeze</string>
    <string name="cd_screenshot">Screenshot</string>
    <string name="notification_mirroring_active">Mirroring active</string>

    <!-- Settings screen -->
    <string name="settings_close">Close</string>
...
    <string name="mirror_control_label_freeze">Freeze</string>
    <string name="mirror_control_label_unfreeze">Unfreeze</string>
    <string name="quick_menu_take_screenshot">Take Screenshot</string>
    <string name="quick_menu_screenshot_top">Top</string>
    <string name="quick_menu_screenshot_bottom">Bottom</string>
    <string name="quick_menu_screenshot_both">Both</string>
    <string name="cd_screenshot_top">Take screenshot of top screen</string>
    <string name="cd_screenshot_bottom">Take screenshot of bottom screen</string>
    <string name="cd_screenshot_both">Take screenshot of both screens</string>
    <string name="screenshot_saved">Screenshot saved to Pictures/Megingiard</string>
    <string name="screenshot_failed">Failed to save screenshot</string>

    <!-- Exit confirmation dialog -->
    <string name="exit_dialog_title">Exit Megingiard</string>
    <string name="exit_dialog_message">Do you want to close the app?</string>
...
